Add letter push

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div class="w-100 float-left text-center">
         <div class="title">
             University
+            push now
         </div>
     </div>
 </body>
